Make BridgeDB export internal metrics.
BridgeDB already exports usage metrics that help us understand how our
users interact with BridgeDB.  This commit adds internal metrics, which
shed light on BridgeDB's internals.  In particular, we add the following
internal metrics:

* Number of bridges per distributor subring.

* Number of empty responses per distributor.

* Number of IPv4/IPv6 handouts.

* Descriptive statistics on the number of bridge handouts (min, max,
  median, quartile 1, quartile 3, upper whisker, lower whisker).

* Number of unique bridges that were handed out.

This patch fixes tpo/anti-censorship/bridgedb#31422 and also bumps
BridgeDB's metrics format to version 2.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+    * FIXES https://bugs.torproject.org/31422
+    Make BridgeDB report internal metrics, like the median number of users that
+    bridges were handed out to.
+
     * FIXES https://bugs.torproject.org/34260
     Parse bridge blocking information from SQL database.
 
