Make our email autoresponder more usable.
So far, our autoresponder would only send you bridges if your request
was valid.  Unfortunately, it's not very easy to figure out what a
correct request looks like.  This patch returns bridges regardless of if
the request was valid or not.  We also remove the "help" autoresponse
because there's no longer a need for it, and we simplify BridgeDB's auto
response, hopefully making it less frustrating for users.

This fixes <https://bugs.torproject.org/30941>.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+        * FIXES https://bugs.torproject.org/30941
+        Make our email responder more usable.  This patch removes the concept of
+        "valid" email commands and returns bridges (obfs4, for now) no matter
+        what the user sends.  BridgeDB still supports email commands in case the
+        user needs a vanilla or IPv6 bridge.
+
         * FIXES https://bugs.torproject.org/29686
         Rename files that contain "Bridges" to "bridgerings", to eliminate
         headache on file systems that are case insensitive.
