--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+    * FIXES https://bugs.torproject.org/19774
+    Add a favicon to BridgeDB's web UI.
+
 Changes in version 0.10.1 - 2020-05-27
 
     * FIXES https://bugs.torproject.org/33945
