Only process text/plain part of emails.
When our autoresponder receives a multipart email from a user, it may
get confused by the parts that are not text/plain.  Instead of bending
over backwards to parse all sorts email encodings, this patch discard
the parts of a multipart email that aren't text/plain.

This fixes tpo/anti-censorship/bridgedb#33835.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+    * FIXES https://gitlab.torproject.org/tpo/anti-censorship/bridgedb/-/issues/33835
+    If a user sends a multipart email to our autoresponder, we now only parse
+    the part that has a text/plain encoding.
+
     * FIXES https://bugs.torproject.org/33647
     Fix broken link in the README and fix our Makefile's pylint target.
 
