Parse bridge blocking info from SQL database.
The plan currently is that wolpertinger will populate our SQL database
with bridge blocking info provided by OONI.  This patch adds code that
parses this data and adds it to our existing bridge objects.

This fixes tpo/anti-censorship/bridgedb#34260.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+    * FIXES https://bugs.torproject.org/34260
+    Parse bridge blocking information from SQL database.
+
     * FIXES https://gitlab.torproject.org/tpo/anti-censorship/bridgedb/-/issues/40001
     Remove the --reload command line switch.  It doesn't actually do anything.
 
