--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+Changes in version 0.11.0 - 2020-07-08
+
     * FIXES https://bugs.torproject.org/31422
     Make BridgeDB report internal metrics, like the median number of users that
     bridges were handed out to.
